-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
4.8.0
-
None
-
Change-Id: Ia0c802f275eaf009e42ffef4cc538f3b3d7561d0
In documentation article "The State Machine Framework" part "Sharing Transitions By Grouping States" you forgot one line in example which makes it does not work. After line: machine.addState(s2); should be: machine.setInitialState(s1); because s1->setInitialState(s11); is not enought for QStateMachine.