Doc: Fix snippet bug in State Machine overview.

Task-number: QTBUG-24719
Change-Id: Ia0c802f275eaf009e42ffef4cc538f3b3d7561d0
Reviewed-by: Casper van Donderen <casper.vandonderen@nokia.com>